# Fractal-Analisys

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  app.py  requirements.txt  setup.py
.streamlit/: config.toml  pages.toml
frontend/: lacunarity.py  welcome.py
lib/include/: Bradly_threshold.h  Coord.h  Fractal_analisys.h  Marks.h  binarize.h  boxCounting.h  calc_Increase.h  calc_Regression.h  countUniqueMarkers.h  hasNumber.h  matrix_process.h  memory_free.h  result.h
lib/source/: Bradly_threshold.cpp  Fractal_analisys.cpp  calcDerivative.cpp  calc_Increase.cpp  compute_derivative.cpp  compute_square.cpp  hasNumber.cpp  logFrom.cpp  main.cpp  matrix_process.cpp  memory_free.cpp  slide_box_counting.cpp
new_pythonfile/: arr.py  example.py
src/: __init__.py  __main__.py  example.py  text_data.txt
src/.cpp/: boxCounting.cpp  countUniqueMarkers.cpp  findInnerOnes.cpp  loadImg.cpp  main.cpp  markArea.cpp  markInnerOnes.cpp  markIsolatedZeros.cpp  plotter.cpp  slide_box_counting.cpp
src/.h/: binarize.h  compute_derivative.h  compute_square.h  findInnerOnes.h  markArea.h  plotter.h  writeToFile.h
src/calculations/lacunarity/: __init__.py  lacunarity.py  one_file_calculation.py  utils.py
src/evaluation/: __init__.py
src/evaluation/lacunarity/: __init__.py  plot_results.py  table_results.py
src/include/: boxCounting.h  calcDerivative.h  compute_square.h  countUniqueMarkers.h  findInnerOnes.h  hasNumber.h  loadImg.h  logFrom.h  markArea.h  markInnerOnes.h  markIsolatedZeros.h  slide_box_counting.h
src/lacunarity/: lacunarity.py
src/output/: plot_results.py  table_results.py
src/paths/: find_files.py  paths.py
src/source/: binarize.cpp  boxCounting.cpp  calcDerivative.cpp  calc_Regression.cpp  compute_square.cpp  countUniqueMarkers.cpp  main.cpp  markArea.cpp  markInnerOnes.cpp  memory_free.cpp
src/utils/: __init__.py  find_files.py  paths.py  security.py
tests/: test_lacunarity.py
